# bt_talk_2022

./: CMakeLists.txt  README.md  package.xml
config/: bt_fall_2021.xml
launch/: BT_Talk_2021.launch.py
src/: BTSimDb.h  BT_Talk_2021.cpp  calculateNearestWallGoal.cpp  calculateNearestWallGoal.h  calculateNearestWallGoal.hpp  canSeeACloseWall.cpp  canSeeACloseWall.h  canSeeACloseWall.hpp  closePointSubscriber.cpp  closePointSubscriber.h  isNearAWall.cpp  isNearAWall.h  isNearAWall.hpp  moveAShortDistanceAhead.cpp  moveAShortDistanceAhead.h  moveToPose.cpp  moveToPose.hpp  moveToPoseActionClient.hpp  notAboutToCollide.cpp  notAboutToCollide.h  notYetTraveledMaximumDistance.cpp  notYetTraveledMaximumDistance.h  saySomething.hpp  turnInRelativeDirection.cpp  turnInRelativeDirection.h
